<resources>
    <string name="app_name">RecipeBox</string>
    <string name="detail_button">Show recipe</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="title_top">RecipeBox</string>

    <string name="home_tab">Home</string>
    <string name="tab1">Dishes</string>
    <string name="tab2">Desserts</string>

    <string name="top_header">Jakiś nagłówek</string>
    <string name="top_image">Jakiś obrazek</string>

    <string name="image_title">Dish</string>
    <string name="ingredients">\nIngredients:</string>
    <string name="directions">\nDirections:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fresh_and_tasty">Fresh and Tasty</string>
    <string name="want_to_eat_fresh_healthy_and_tasty_recipebox_will_help_you_with_this">Want to eat fresh, healthy and tasty? RecipeBox will help you with this.</string>
    <string name="app_that_allows_users_to_browse_a_collection_of_recipes">App that allows users to browse a collection of recipes.</string>
    <string name="you_are_a_busy_person_and_you_care_about_time_a_lot_recipebox_is_made_for_you">You are a busy person and you care about time a lot? RecipeBox is made for you!</string>
    <string name="tick_tock">Tick Tock...</string>
    <string name="cheat_day">Cheat Day?</string>
    <string name="everyone_deserves_a_moment_of_pleasure_from_time_to_time_recipebox_will_not_judge_you">Everyone deserves a moment of pleasure from time to time. RecipeBox will not judge you.</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>
    <string name="minus">Minus</string>
    <string name="minus_second">Minus second</string>
    <string name="plus_second">Plus second</string>
    <string name="plus_minute">Plus minute</string>
</resources>