<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textSize="56sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/play"
            android:contentDescription="@string/play"
            android:paddingHorizontal="27dp"
            android:paddingVertical="13dp"
            />


        <ImageButton
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/pause"
            android:contentDescription="@string/pause"
            android:paddingHorizontal="27dp"
            android:paddingVertical="13dp"
            />

        <ImageButton
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/restart"
            android:contentDescription="@string/restart"
            android:paddingHorizontal="27dp"
            android:paddingVertical="13dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <ImageButton
            android:id="@+id/minusMinuteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/minus"
            android:contentDescription="@string/minus"
            android:paddingHorizontal="27dp"
            android:paddingVertical="13dp"
            />

        <ImageButton
            android:id="@+id/minusSecondButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/minus_thin"
            android:contentDescription="@string/minus_second"
            android:paddingHorizontal="27dp"
            android:paddingVertical="13dp"
            />

        <ImageButton
            android:id="@+id/plusSecondButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/plus_thin"
            android:contentDescription="@string/plus_second"
            android:paddingHorizontal="27dp"
            android:paddingVertical="13dp"
            />

        <ImageButton
            android:id="@+id/plusMinuteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/plus"
            android:contentDescription="@string/plus_minute"
            android:paddingHorizontal="27dp"
            android:paddingVertical="13dp"
            />

    </LinearLayout>
</LinearLayout>
